[package]
name = "wstcp"
version = "0.2.2"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "WebSocket to TCP proxy server"
homepage = "https://github.com/sile/wstcp"
repository = "https://github.com/sile/wstcp"
readme = "README.md"
keywords = ["websocket", "proxy", "tcp"]
license = "MIT"
edition = "2018"

[dependencies]
base64 = "0.22"
bytecodec = "0.4"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.0"
httpcodec = "0.2"
log = "0.4.20"
sha-1 = "0.10"
tokio = { version = "1.41.1", features = ["full", "net"] }
trackable = "1"
tokio-util = "0.7.13"
